In Requisition pier and Add project edit error solved

--- a/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
@@ -643,6 +643,7 @@
                     $("#txtWrad").val(data.Ward);
                     $("#txtDPP").val(data.DPP);
                     $("#txtChainage").val(data.Chainage);
+                    $("#txtPier").val(data.Pier);
                     $("#txtUnitId").val(data.UnitId);
                     $("#decEstimatedQty").val(data.EstimatedQty);
                     $("#decReceivedSoFar").val(data.ReceivedSoFar);
