--- a/KGERP/Views/BillRequisition/MDBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/MDBRApproveSlave.cshtml
@@ -162,7 +162,7 @@
                                                         <td class="text-center">@String.Format("{0:0.00}", item.RemainingQty)</td>
                                                     }
                                                     <td class="text-center">
-                                                        @if (Model.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.MD).AprrovalStatusId == (int)EnumBillRequisitionStatus.Pending)
+                                                        @if (Model.StatusName == EnumBillRequisitionStatus.Pending.ToString() && Model.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.MD).AprrovalStatusId == (int)EnumBillRequisitionStatus.Pending)
                                                         {
                                                             @Html.TextBoxFor(model => model.DetailDataList[i].DemandQty, new { id = "demandQty_" + i, @class = "form-control demandValue" })
                                                         }
@@ -172,7 +172,7 @@
                                                         }
                                                     </td>
                                                     <td class="text-center">
-                                                        @if (Model.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.MD).AprrovalStatusId == (int)EnumBillRequisitionStatus.Pending)
+                                                        @if (Model.StatusName == EnumBillRequisitionStatus.Pending.ToString() && Model.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.MD).AprrovalStatusId == (int)EnumBillRequisitionStatus.Pending)
                                                         {
                                                             @Html.TextBoxFor(model => model.DetailDataList[i].UnitRate, new { id = "unitRate_" + i, @class = "form-control unitValue" })
                                                         }
@@ -235,7 +235,7 @@
                                                 if (item.AprrovalStatusId == (int)EnumBillRequisitionStatus.Pending)
                                                 {
                                                     <td style="text-align:center">
-                                                        <span class="btn btn-warning btn-xs"> @item.AprrovalStatusName</span>
+                                                        <span class="btn btn-warning btn-xs">@(Model.StatusName == EnumBillRequisitionStatus.Approved.ToString() ? "Bypass" : item.AprrovalStatusName)</span>
                                                     </td>
                                                 }
                                                 else if (item.AprrovalStatusId == (int)EnumBillRequisitionStatus.Rejected)
@@ -300,12 +300,6 @@
                                                 }
                                                 else
                                                 {
-                                                    @*if (Model.BillRequisitionMasterId > 0 && Model.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.MD).AprrovalStatusId == (int)EnumBillRequisitionStatus.Approved)
-                        {
-                            <a title="Download Report" class="" style="width:100%" target="_blank" href="~/Report/TCLBillRequisiontPaymentReport?companyId=@Model.CompanyFK&billRequisitionMasterId=@Model.BillRequisitionMasterId">
-                                <span class="btn btn-info btn-xs">Pending</span>
-                            </a>
-                        }*@
                                                     <a title="Download Report" class="" style="width:100%" target="_blank" href="~/Report/TCLBillRequisiontPaymentReport?companyId=@Model.CompanyFK&billRequisitionMasterId=@Model.BillRequisitionMasterId">
                                                         <span class="btn btn-warning btn-xs">Pending</span>
                                                     </a>
@@ -340,19 +334,19 @@
                                                     }
                                                     else
                                                     {
-                                                        <span style="font-size: 12px"><b>Remarks: </b> @((item.SignatoryName == "Initiator") ? "Requisition Created. " : "N/A")</span>
+                                                        <span style="font-size: 12px"><b>Remarks: </b> @(item.SignatoryName == "Initiator" ? "Requisition Created. " : "N/A")</span>
                                                     }
                                                     <br />
                                                     @if (item.SignatoryName == "Initiator")
                                                     {
                                                         <span style="font-size: 11px">
-                                                            <b>Time: </b> @((item.ModifiedDate == null) ? "Pending" : item.ModifiedDate.ToString())
+                                                            <b>Time: </b> @(item.ModifiedDate == null ? "Pending" : item.ModifiedDate.ToString())
                                                         </span>
                                                     }
                                                     else
                                                     {
                                                         <span style="font-size: 11px">
-                                                            <b>Time: </b> @((item.ModifiedDate == null) ? "Pending" : item.ModifiedDate.ToString())
+                                                            <b>Time: </b> @(item.ModifiedDate == null ? "Pending" : item.ModifiedDate.ToString())
                                                         </span>
                                                     }
                                                 </td>
@@ -365,7 +359,7 @@
                         }
                     </div>
 
-                    @if (Model.BillRequisitionMasterId > 0 && Model.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.MD).AprrovalStatusId == (int)EnumBillRequisitionStatus.Pending)
+                    @if (Model.BillRequisitionMasterId > 0 && Model.StatusName == EnumBillRequisitionStatus.Pending.ToString() && Model.ApprovalModelList.First(x => x.SignatoryId == (int)EnumBRequisitionSignatory.MD).AprrovalStatusId == (int)EnumBillRequisitionStatus.Pending)
                     {
                         <div class="box-footer">
                             <div class="row">
