--- a/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionMasterSlave.cshtml
@@ -231,6 +231,16 @@
                                             </div>
                                         </div>
                                     </div>
+
+                                    <div class="row d-block">
+                                        <div class="col-md-3 d-block">
+                                            <div class="form-group">
+                                                <label for="txtChainage" class="form-label">Chainage</label>
+                                                @Html.TextBoxFor(model => model.DetailModel.Chainage, new { id = "txtChainage", placeholder = "Chainage", @class = "form-control" })
+                                                @Html.ValidationMessageFor(model => model.DetailModel.Chainage, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                    </div>
                                 }
                                 else if (Model.ProjectTypeId == 0)
                                 {
@@ -879,12 +889,12 @@
                     $("#inputPier").removeClass("d-block").addClass("hidden");
                 } else if (selectedOption.val() == @((int)EnumBillReqProjectType.Bridge)) {
                     $("#depandableInputForm").removeClass("hidden").addClass("d-block");
+                    $("#inputPier").removeClass("hidden").addClass("d-block");
+                    $("#inputChainage").removeClass("hidden").addClass("d-block");
                     $("#inputWard").removeClass("d-block").addClass("hidden");
                     $("#inputDPP").removeClass("d-block").addClass("hidden");
-                    $("#inputPier").removeClass("hidden").addClass("d-block");
                     $("#inputFloor").removeClass("d-block").addClass("hidden");
                     $("#inputMember").removeClass("d-block").addClass("hidden");
-                    $("#inputChainage").removeClass("d-block").addClass("hidden");
                 } else {
                     $("#depandableInputForm").removeClass("d-block").addClass("hidden");
                     $("#inputWard").removeClass("d-block").addClass("hidden");
